tests/pos/targetName-override/A_1.scala
// Scala
import annotation.targetName
class A_1 {
  @targetName("bar") def foo(): Int = 1
}
